--- a/BookListRazor/Pages/BookList/Create.cshtml
+++ b/BookListRazor/Pages/BookList/Create.cshtml
@@ -19,6 +19,7 @@
                     <div class="col-sm-4">
                         <input asp-for="Book.Name" class="form-control" />
                     </div>
+                    <span asp-validation-for="Book.Name" class="text-danger"></span>
                 </div>
             </div>
             <div class="form-group">
@@ -29,6 +30,7 @@
                     <div class="col-sm-4">
                         <input asp-for="Book.Author" class="form-control" />
                     </div>
+                    <span asp-validation-for="Book.Author" class="text-danger"></span>
                 </div>
             </div>
             <div class="form-group">
@@ -39,6 +41,7 @@
                     <div class="col-sm-4">
                         <input asp-for="Book.ISBN" class="form-control" />
                     </div>
+                    <span asp-validation-for="Book.ISBN" class="text-danger"></span>
                 </div>
             </div>
             <div class="form-group">
@@ -55,3 +58,6 @@
 </form>
 </div>
 
+@section Scripts {
+    @{ await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+}
