--- a/BookListRazor/Pages/BookList/Index.cshtml
+++ b/BookListRazor/Pages/BookList/Index.cshtml
@@ -14,42 +14,59 @@
     </div>
 </div>
 
-@if(Model.Books.Count()>0)
+@if(Model.Message != null)
 {
-    <br /><br />
-    <table class="table table-striped border">
-        <tr class="table-secondary">
-            <th>
-                @Html.DisplayNameFor(m => m.Books.FirstOrDefault().Name)
-            </th>
-            <th>
-                @Html.DisplayNameFor(m => m.Books.FirstOrDefault().Author)
-            </th>
-            <th>
-                @Html.DisplayNameFor(m => m.Books.FirstOrDefault().ISBN)
-            </th>
-            <th></th>
-        </tr>
-        @foreach(var item in Model.Books)
-        {
-        <tr>
-            <td>
-                @Html.DisplayFor(m => item.Name)
-            </td>
-            <td>
-                @Html.DisplayFor(m => item.Author)
-            </td>
-            <td>
-                @Html.DisplayFor(m => item.ISBN)
-            </td>
-        </tr>
-        }
-    </table>
-}
-else
-{
-    <p>
-        No Books Available.
-    </p>
+    <div class="alert alert-info alert-dismissible" role="alert">
+        <button type="button" class="close" data-dismiss="alert" aira-label="close">
+            <span aria-hidden="true">&times;</span>
+        </button>
+        @Model.Message
+    </div>
 }
 
+<form method="post">
+    @if (Model.Books.Count() > 0)
+    {
+        <br /><br />
+        <table class="table table-striped border">
+            <tr class="table-secondary">
+                <th>
+                    @Html.DisplayNameFor(m => m.Books.FirstOrDefault().Name)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(m => m.Books.FirstOrDefault().Author)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(m => m.Books.FirstOrDefault().ISBN)
+                </th>
+                <th></th>
+            </tr>
+            @foreach (var item in Model.Books)
+            {
+                <tr>
+                    <td>
+                        @Html.DisplayFor(m => item.Name)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(m => item.Author)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(m => item.ISBN)
+                    </td>
+                    <td>
+                        <button asp-page-handler="Delete" asp-route-id="@item.ID"
+                         onclick="return confirm('Are yue sure delete it?');"
+                         class="btn btn-danger btn-sm">Delete</button>
+                        <a asp-route-id="@item.ID" asp-page="Edit" class="btn btn-success btn-sm">Edit</a>
+                    </td>
+                </tr>
+            }
+        </table>
+    }
+    else
+    {
+        <p>
+            No Books Available.
+        </p>
+    }
+</form>
